--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,19 +3,19 @@
 
 name: Airflow Deployment
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+#on:
+#  push:
+#    branches: [ "main" ]
+#  pull_request:
+#    branches: [ "main" ]
 
-permissions:
-  contents: read
+#permissions:
+#  contents: read
 
 jobs:
   build:
 
-    runs-on: apache/airflow:2.2.1
+    runs-on: apache/airflow:latest
 
     steps:
     - uses: actions/checkout@v3
