--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Airflow Deployment
+name: Python application
 
 on:
   push:
@@ -9,34 +6,31 @@ on:
   pull_request:
     branches: [ "main" ]
 
-#permissions:
-#  contents: read
+permissions:
+  contents: read
 
 jobs:
   build:
 
-    runs-on: apache/airflow:latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.9
+    - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: "3.9"
-    - name: Check Dags
+        python-version: "3.10"
+    - name: Install dependencies
       run: |
-        cp dags/*.py /opt/airflow/dags
-        airflow standalone &> airflow.log 2>&1 &
-        sleep 30
-        airflow dags report -v > report.log
-        cat report.log
-        |
-        if grep -Fwq "ERROR" report.log
-        then
-          echo "Error detected!"
-          exit 1
-        fi
-    - name: Alguma Coisa
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        ls -l
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
+      run: |
+        pytest
