--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: apache/airflow:slim-2.5.0-python3.8
 
     steps:
     - uses: actions/checkout@v3
