--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install apache-airflow
+        pip install apache-airflow==2.1.3
     - name: Start Airflow
       run: |
          export AIRFLOW_HOME=~/airflow
@@ -31,11 +31,14 @@ jobs:
          #airflow standalone &> airflow.log 2>&1 &
          #sleep 30
          airflow db init
+         export AIRFLOW_HOME=~/airflow
+         export AIRFLOW__CORE__LOAD_EXAMPLES='false'
          airflow webserver -D
          airflow scheduler -D
     - name: Dags
       run: |
          export AIRFLOW_HOME=~/airflow
+         export AIRFLOW__CORE__LOAD_EXAMPLES='false
          cp dags/* $AIRFLOW_HOME/dags
          cd $AIRFLOW_HOME
          ls -l
