--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,8 +44,8 @@ jobs:
          ls -l
          airflow dags report -v > report.log
          cat report.log
-         #if grep -Fwq "ERROR" report.log
-         #then
-         #   echo "Error detected!"
-         #   exit 1
-         #fi
+         if grep -Fwq "ERROR" report.log
+         then
+            echo "Error detected!"
+            exit 1
+         fi
