--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,12 +20,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.8"
-    - name: Install dependencies
+    - name: Install dependencies and Test
       run: |
         python -m pip install --upgrade pip
         pip install apache-airflow==2.4.2
-    -name: Test
-      run: |
         pytest .
     - name: Start Airflow
       run: |
