--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies and Test
       run: |
         python -m pip install --upgrade pip
-        pip install apache-airflow==2.4.2
+        pip install -r requirements-dev.txt
         pytest .
     - name: Start Airflow
       run: |
